# permutation-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: .permutation.rs.un~  main.rs  mod.rs  permutation.rs
src/permutation/: mod.rs  permutation.rs
tests/: test.rs
